# assistant_AI_that_analyzes_food_images

./: README.md  app.py  pyproject.toml
config/: settings.py
src/: food_image_analyzer.py
utils/: ansi_color_constants.py
