[project]
name = "foodchatbot"
version = "0.1.0"
description = "Aqui criamos um ChatBot que analisa imagens de alimentos e fornece uma descrição"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lancedb>=0.21.1",
    "langchain-community>=0.3.20",
    "langchain-groq>=0.3.1",
    "mesop>=1.0.0",
    "openai>=1.66.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "streamlit>=1.43.2",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
